[package]
name = "rust_ode_solvers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = {version = "0.15.6", features = ["serde"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.83"